syntax = "proto3";

package com.iabtechlab.adcom.types;

message ExchangeBExtension {
  string id = 1;
  int32 bar = 2;
}
